# CAHD

./: .clang-format  .gitignore  LICENSE  README.md  TODO.md  chybaDziuraWSrodku.brep  chybaDziuraWSrodku2.step  chybaDziuraWSrodku3.step  chybaDziuraWSrodku4.step
app/: CMakeLists.txt  build.env.template  main.cpp  modelinfo.cpp  modelinfo.h
app/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
app/occtwidget/: occtwidget.cpp  occtwidget.h
kodWVisualu/CadCam/CadCam/: CadCam.cpp
kodWVisualu/CadCam/CadCam/x64/Debug/: CadCam.exe.recipe
kodWVisualu/CadCam/CadCam/x64/Debug/CadCam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CadCam.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
kodWVisualu/CadCam/x64/Debug/: CadCam.exp  CadCam.lib
